Added login, and registration views

--- a/cookbook_project/cookbook/templates/login.html
+++ b/cookbook_project/cookbook/templates/login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title  %}Główna strona {% endblock %}
+{% block title  %}Login site {% endblock %}
 {%block body %}
-<h1>Main</h1>
+<h1>Login to site</h1>
 
 <form action='/' method="POST">
 		{{form.as_p}}
