--- a/cookbook_project/cookbook/templates/signup.html
+++ b/cookbook_project/cookbook/templates/signup.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title  %}Główna strona {% endblock %}
+{% block title  %}Registration site {% endblock %}
 {%block body %}
-<h1>Main</h1>
+<h1>Register a new user!</h1>
 
 <form action='/' method="POST">
 		{{form.as_p}}
