--- a/cookbook_project/cookbook/templates/main.html
+++ b/cookbook_project/cookbook/templates/main.html
@@ -1,11 +1,29 @@
 {% extends 'base.html' %}
 
-{% block title  %}Główna strona {% endblock %}
+{% block title  %}Main site{% endblock %}
 {%block body %}
-<h1>Main</h1>
-{{user}}
-<form action='/' method="POST">
-		{{form.as_p}}
-		<input type="submit" name="Dadaj"/>
-</form>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">CookBook</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Show recipes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Add recipe</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+			<a href="/logout">Logout</a>
+    </span>
+  </div>
+</nav>
+<strong>{{user}}</strong>
 {% endblock %}
