--- a/cookbook_project/cookbook/templates/base.html
+++ b/cookbook_project/cookbook/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% load static %}
 <link rel="stylesheet" href="{% static '/css/bootstrap.min.css'  %}"
 <script src="{% static '/js/bootstrap.min.js' %}" ></script>
@@ -14,8 +15,30 @@
 <body>
 
 <div class="container-fluid">
-
-
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">CookBook</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/main">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/showrecipe">Show recipes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/addrecipe">Add recipe</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+			<a href="/logout">Logout</a>
+    </span>
+  </div>
+</nav>
+{% endblock %}
 
 	
 {% block body %}
