--- a/cookbook_project/cookbook/templates/login.html
+++ b/cookbook_project/cookbook/templates/login.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block navbar %}
+
+{% endblock %}
+
 {% block title  %}Login site {% endblock %}
 {%block body %}
 <h1>Login to site</h1>
